feat: sematic git module added

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "semantic-release": "^25.0.2"
+  },
+  "dependencies": {
+    "@semantic-release/git": "github:semantic-release/git"
   }
 }
