--- a/.releaserc.json
+++ b/.releaserc.json
@@ -20,22 +20,7 @@
     [
       "@semantic-release/release-notes-generator",
       {
-        "preset": "conventionalcommits",
-        "presetConfig": {
-          "types": [
-            { "type": "feat", "section": "✨ Features" },
-            { "type": "fix", "section": "🐛 Bug Fixes" },
-            { "type": "perf", "section": "⚡ Performance Improvements" },
-            { "type": "revert", "section": "⏪ Reverts" },
-            { "type": "docs", "section": "📚 Documentation" },
-            { "type": "style", "section": "💄 Styles" },
-            { "type": "refactor", "section": "♻️ Code Refactoring" },
-            { "type": "test", "section": "✅ Tests" },
-            { "type": "build", "section": "📦 Build System" },
-            { "type": "ci", "section": "👷 Continuous Integration" },
-            { "type": "chore", "section": "🔧 Chores" }
-          ]
-        },
+        "preset": "angular",
         "parserOpts": {
           "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
         },
